parser.out
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 74 resolved as shift.
shift/reduce conflict in state 111 resolved as shift.
shift/reduce conflict in state 111 resolved as shift.
shift/reduce conflict in state 111 resolved as shift.
shift/reduce conflict in state 111 resolved as shift.
shift/reduce conflict in state 111 resolved as shift.
shift/reduce conflict in state 111 resolved as shift.
shift/reduce conflict in state 111 resolved as shift.
shift/reduce conflict in state 111 resolved as shift.
shift/reduce conflict in state 111 resolved as shift.
shift/reduce conflict in state 111 resolved as shift.
shift/reduce conflict in state 111 resolved as shift.
shift/reduce conflict in state 111 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 115 resolved as shift.
shift/reduce conflict in state 120 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 123 resolved as shift.
shift/reduce conflict in state 134 resolved as shift.
shift/reduce conflict in state 134 resolved as shift.
shift/reduce conflict in state 134 resolved as shift.
shift/reduce conflict in state 134 resolved as shift.
shift/reduce conflict in state 134 resolved as shift.
shift/reduce conflict in state 134 resolved as shift.
shift/reduce conflict in state 134 resolved as shift.
shift/reduce conflict in state 134 resolved as shift.
shift/reduce conflict in state 134 resolved as shift.
shift/reduce conflict in state 134 resolved as shift.
shift/reduce conflict in state 134 resolved as shift.
shift/reduce conflict in state 134 resolved as shift.
shift/reduce conflict in state 135 resolved as shift.
shift/reduce conflict in state 135 resolved as shift.
shift/reduce conflict in state 135 resolved as shift.
shift/reduce conflict in state 135 resolved as shift.
shift/reduce conflict in state 135 resolved as shift.
shift/reduce conflict in state 135 resolved as shift.
shift/reduce conflict in state 135 resolved as shift.
shift/reduce conflict in state 135 resolved as shift.
shift/reduce conflict in state 135 resolved as shift.
shift/reduce conflict in state 135 resolved as shift.
shift/reduce conflict in state 135 resolved as shift.
shift/reduce conflict in state 135 resolved as shift.
shift/reduce conflict in state 136 resolved as shift.
shift/reduce conflict in state 136 resolved as shift.
shift/reduce conflict in state 136 resolved as shift.
shift/reduce conflict in state 136 resolved as shift.
shift/reduce conflict in state 136 resolved as shift.
shift/reduce conflict in state 136 resolved as shift.
shift/reduce conflict in state 136 resolved as shift.
shift/reduce conflict in state 136 resolved as shift.
shift/reduce conflict in state 136 resolved as shift.
shift/reduce conflict in state 136 resolved as shift.
shift/reduce conflict in state 136 resolved as shift.
shift/reduce conflict in state 136 resolved as shift.
shift/reduce conflict in state 137 resolved as shift.
shift/reduce conflict in state 137 resolved as shift.
shift/reduce conflict in state 137 resolved as shift.
shift/reduce conflict in state 137 resolved as shift.
shift/reduce conflict in state 137 resolved as shift.
shift/reduce conflict in state 137 resolved as shift.
shift/reduce conflict in state 137 resolved as shift.
shift/reduce conflict in state 137 resolved as shift.
shift/reduce conflict in state 137 resolved as shift.
shift/reduce conflict in state 137 resolved as shift.
shift/reduce conflict in state 137 resolved as shift.
shift/reduce conflict in state 137 resolved as shift.
shift/reduce conflict in state 138 resolved as shift.
shift/reduce conflict in state 138 resolved as shift.
shift/reduce conflict in state 138 resolved as shift.
shift/reduce conflict in state 138 resolved as shift.
shift/reduce conflict in state 138 resolved as shift.
shift/reduce conflict in state 138 resolved as shift.
shift/reduce conflict in state 138 resolved as shift.
shift/reduce conflict in state 138 resolved as shift.
shift/reduce conflict in state 138 resolved as shift.
shift/reduce conflict in state 138 resolved as shift.
shift/reduce conflict in state 138 resolved as shift.
shift/reduce conflict in state 138 resolved as shift.


Unused terminals:


Grammar

Rule 1     declaration -> var_declaration
Rule 2     declaration -> fun_declaration
Rule 3     var_declaration -> type_specifier ID SEMICOLON
Rule 4     var_declaration -> type_specifier var_declaration_list SEMICOLON
Rule 5     var_declaration_list -> var_declaration_list COMMA var EQUAL operation_expression
Rule 6     var_declaration_list -> var EQUAL operation_expression
Rule 7     fun_declaration -> type_specifier ID LPAREN params RPAREN compount_stmt
Rule 8     type_specifier -> INT
Rule 9     type_specifier -> VOID
Rule 10    type_specifier -> CHAIN
Rule 11    params -> param_list
Rule 12    param_list -> param COMMA param_list
Rule 13    param_list -> param
Rule 14    param_list -> empty
Rule 15    param -> type_specifier ID
Rule 16    compount_stmt -> LBLOCK local_declarations statement_list RBLOCK
Rule 17    local_declarations -> local_declarations var_declaration
Rule 18    local_declarations -> empty
Rule 19    statement_list -> statement_list statement
Rule 20    statement_list -> empty
Rule 21    statement -> expression_stmt
Rule 22    statement -> compount_stmt
Rule 23    statement -> selection_stmt
Rule 24    statement -> iteration_stmt
Rule 25    statement -> return_stmt
Rule 26    expression_stmt -> expression SEMICOLON
Rule 27    expression_stmt -> SEMICOLON
Rule 28    expression_stmt -> PRINT LPAREN var RPAREN SEMICOLON
Rule 29    expression_stmt -> PRINT LPAREN QUOTES STRING QUOTES RPAREN SEMICOLON
Rule 30    expression_stmt -> ID PLUSPLUS
Rule 31    expression_stmt -> PLUSPLUS ID
Rule 32    expression_stmt -> ID MINUSMINUS
Rule 33    expression_stmt -> MINUSMINUS ID
Rule 34    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 35    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 36    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 37    iteration_stmt -> <empty>
Rule 38    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON expression RPAREN statement
Rule 39    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON var PLUSPLUS RPAREN statement
Rule 40    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON PLUSPLUS var RPAREN statement
Rule 41    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON var MINUSMINUS RPAREN statement
Rule 42    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON MINUSMINUS var RPAREN statement
Rule 43    return_stmt -> RETURN SEMICOLON
Rule 44    return_stmt -> RETURN expression SEMICOLON
Rule 45    expression -> var EQUAL expression
Rule 46    expression -> simple_expression
Rule 47    var -> ID
Rule 48    simple_expression -> operation_expression relop operation_expression
Rule 49    simple_expression -> operation_expression
Rule 50    relop -> LESS
Rule 51    relop -> LESSEQUAL
Rule 52    relop -> GREATER
Rule 53    relop -> GREATEREQUAL
Rule 54    relop -> DEQUAL
Rule 55    relop -> DISTINT
Rule 56    relop -> QUOTES
Rule 57    operation_expression -> factor simb_op operation_expression
Rule 58    operation_expression -> factor
Rule 59    simb_op -> addop
Rule 60    simb_op -> mulop
Rule 61    addop -> PLUS
Rule 62    addop -> MINUS
Rule 63    mulop -> TIMES
Rule 64    mulop -> DIVIDE
Rule 65    factor -> LPAREN expression RPAREN
Rule 66    factor -> var
Rule 67    factor -> call
Rule 68    factor -> NUMBER
Rule 69    call -> ID LPAREN args RPAREN
Rule 70    args -> args_list
Rule 71    args -> empty
Rule 72    args_list -> expression COMMA args_list
Rule 73    args_list -> expression
Rule 74    empty -> <empty>

Terminals, with rules where they appear

CHAIN                : 10
COMMA                : 5 12 72
DEQUAL               : 54
DISTINT              : 55
DIVIDE               : 64
ELSE                 : 35
EQUAL                : 5 6 45
FOR                  : 38 39 40 41 42
GREATER              : 52
GREATEREQUAL         : 53
ID                   : 3 7 15 30 31 32 33 47 69
IF                   : 34 35
INT                  : 8
LBLOCK               : 16
LESS                 : 50
LESSEQUAL            : 51
LPAREN               : 7 28 29 34 35 36 38 39 40 41 42 65 69
MINUS                : 62
MINUSMINUS           : 32 33 41 42
NUMBER               : 68
PLUS                 : 61
PLUSPLUS             : 30 31 39 40
PRINT                : 28 29
QUOTES               : 29 29 56
RBLOCK               : 16
RETURN               : 43 44
RPAREN               : 7 28 29 34 35 36 38 39 40 41 42 65 69
SEMICOLON            : 3 4 26 27 28 29 38 38 39 39 40 40 41 41 42 42 43 44
STRING               : 29
TIMES                : 63
VOID                 : 9
WHILE                : 36
error                : 

Nonterminals, with rules where they appear

addop                : 59
args                 : 69
args_list            : 70 72
call                 : 67
compount_stmt        : 7 22
declaration          : 0
empty                : 14 18 20 71
expression           : 26 34 35 36 38 38 39 40 41 42 44 45 65 72 73
expression_stmt      : 21
factor               : 57 58
fun_declaration      : 2
iteration_stmt       : 24
local_declarations   : 16 17
mulop                : 60
operation_expression : 5 6 48 48 49 57
param                : 12 13
param_list           : 11 12
params               : 7
relop                : 48
return_stmt          : 25
selection_stmt       : 23
simb_op              : 57
simple_expression    : 46
statement            : 19 34 35 35 36 38 39 40 41 42
statement_list       : 16 19
type_specifier       : 3 4 7 15
var                  : 5 6 28 38 39 39 40 40 41 41 42 42 45 66
var_declaration      : 1 17
var_declaration_list : 4 5


Parsing method: LALR


state 0

    (0) S' -> . declaration
    (1) declaration -> . var_declaration
    (2) declaration -> . fun_declaration
    (3) var_declaration -> . type_specifier ID SEMICOLON
    (4) var_declaration -> . type_specifier var_declaration_list SEMICOLON
    (7) fun_declaration -> . type_specifier ID LPAREN params RPAREN compount_stmt
    (8) type_specifier -> . INT
    (9) type_specifier -> . VOID
    (10) type_specifier -> . CHAIN

    INT             shift and go to state 4
    VOID            shift and go to state 5
    CHAIN           shift and go to state 2


    type_specifier                 shift and go to state 1
    fun_declaration                shift and go to state 3
    var_declaration                shift and go to state 6
    declaration                    shift and go to state 7

state 1

    (3) var_declaration -> type_specifier . ID SEMICOLON
    (4) var_declaration -> type_specifier . var_declaration_list SEMICOLON
    (7) fun_declaration -> type_specifier . ID LPAREN params RPAREN compount_stmt
    (5) var_declaration_list -> . var_declaration_list COMMA var EQUAL operation_expression
    (6) var_declaration_list -> . var EQUAL operation_expression
    (47) var -> . ID

    ID              shift and go to state 10


    var                            shift and go to state 8
    var_declaration_list           shift and go to state 9

state 2

    (10) type_specifier -> CHAIN .

    ID              reduce using rule 10 (type_specifier -> CHAIN .)



state 3

    (2) declaration -> fun_declaration .

    $end            reduce using rule 2 (declaration -> fun_declaration .)



state 4

    (8) type_specifier -> INT .

    ID              reduce using rule 8 (type_specifier -> INT .)



state 5

    (9) type_specifier -> VOID .

    ID              reduce using rule 9 (type_specifier -> VOID .)



state 6

    (1) declaration -> var_declaration .

    $end            reduce using rule 1 (declaration -> var_declaration .)



state 7

    (0) S' -> declaration .




state 8

    (6) var_declaration_list -> var . EQUAL operation_expression

    EQUAL           shift and go to state 11



state 9

    (4) var_declaration -> type_specifier var_declaration_list . SEMICOLON
    (5) var_declaration_list -> var_declaration_list . COMMA var EQUAL operation_expression

    SEMICOLON       shift and go to state 12
    COMMA           shift and go to state 13



state 10

    (3) var_declaration -> type_specifier ID . SEMICOLON
    (7) fun_declaration -> type_specifier ID . LPAREN params RPAREN compount_stmt
    (47) var -> ID .

    SEMICOLON       shift and go to state 14
    LPAREN          shift and go to state 15
    EQUAL           reduce using rule 47 (var -> ID .)



state 11

    (6) var_declaration_list -> var EQUAL . operation_expression
    (57) operation_expression -> . factor simb_op operation_expression
    (58) operation_expression -> . factor
    (65) factor -> . LPAREN expression RPAREN
    (66) factor -> . var
    (67) factor -> . call
    (68) factor -> . NUMBER
    (47) var -> . ID
    (69) call -> . ID LPAREN args RPAREN

    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 16
    ID              shift and go to state 22


    operation_expression           shift and go to state 17
    factor                         shift and go to state 19
    var                            shift and go to state 20
    call                           shift and go to state 21

state 12

    (4) var_declaration -> type_specifier var_declaration_list SEMICOLON .

    $end            reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    INT             reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    VOID            reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    CHAIN           reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    RBLOCK          reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    SEMICOLON       reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    PRINT           reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    ID              reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    PLUSPLUS        reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    MINUSMINUS      reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    LBLOCK          reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    IF              reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    WHILE           reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    FOR             reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    RETURN          reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    LPAREN          reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)
    NUMBER          reduce using rule 4 (var_declaration -> type_specifier var_declaration_list SEMICOLON .)



state 13

    (5) var_declaration_list -> var_declaration_list COMMA . var EQUAL operation_expression
    (47) var -> . ID

    ID              shift and go to state 24


    var                            shift and go to state 23

state 14

    (3) var_declaration -> type_specifier ID SEMICOLON .

    $end            reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    INT             reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    VOID            reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    CHAIN           reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    RBLOCK          reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    SEMICOLON       reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    PRINT           reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    ID              reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    PLUSPLUS        reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    MINUSMINUS      reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    LBLOCK          reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    IF              reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    WHILE           reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    FOR             reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    RETURN          reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    LPAREN          reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)
    NUMBER          reduce using rule 3 (var_declaration -> type_specifier ID SEMICOLON .)



state 15

    (7) fun_declaration -> type_specifier ID LPAREN . params RPAREN compount_stmt
    (11) params -> . param_list
    (12) param_list -> . param COMMA param_list
    (13) param_list -> . param
    (14) param_list -> . empty
    (15) param -> . type_specifier ID
    (74) empty -> .
    (8) type_specifier -> . INT
    (9) type_specifier -> . VOID
    (10) type_specifier -> . CHAIN

    RPAREN          reduce using rule 74 (empty -> .)
    INT             shift and go to state 4
    VOID            shift and go to state 5
    CHAIN           shift and go to state 2


    type_specifier                 shift and go to state 25
    param_list                     shift and go to state 26
    param                          shift and go to state 27
    params                         shift and go to state 28
    empty                          shift and go to state 29

state 16

    (68) factor -> NUMBER .

    PLUS            reduce using rule 68 (factor -> NUMBER .)
    MINUS           reduce using rule 68 (factor -> NUMBER .)
    TIMES           reduce using rule 68 (factor -> NUMBER .)
    DIVIDE          reduce using rule 68 (factor -> NUMBER .)
    LESS            reduce using rule 68 (factor -> NUMBER .)
    LESSEQUAL       reduce using rule 68 (factor -> NUMBER .)
    GREATER         reduce using rule 68 (factor -> NUMBER .)
    GREATEREQUAL    reduce using rule 68 (factor -> NUMBER .)
    DEQUAL          reduce using rule 68 (factor -> NUMBER .)
    DISTINT         reduce using rule 68 (factor -> NUMBER .)
    QUOTES          reduce using rule 68 (factor -> NUMBER .)
    RPAREN          reduce using rule 68 (factor -> NUMBER .)
    COMMA           reduce using rule 68 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 68 (factor -> NUMBER .)



state 17

    (6) var_declaration_list -> var EQUAL operation_expression .

    SEMICOLON       reduce using rule 6 (var_declaration_list -> var EQUAL operation_expression .)
    COMMA           reduce using rule 6 (var_declaration_list -> var EQUAL operation_expression .)



state 18

    (65) factor -> LPAREN . expression RPAREN
    (45) expression -> . var EQUAL expression
    (46) expression -> . simple_expression
    (47) var -> . ID
    (48) simple_expression -> . operation_expression relop operation_expression
    (49) simple_expression -> . operation_expression
    (57) operation_expression -> . factor simb_op operation_expression
    (58) operation_expression -> . factor
    (65) factor -> . LPAREN expression RPAREN
    (66) factor -> . var
    (67) factor -> . call
    (68) factor -> . NUMBER
    (69) call -> . ID LPAREN args RPAREN

    ID              shift and go to state 22
    LPAREN          shift and go to state 18
    NUMBER          shift and go to state 16


    operation_expression           shift and go to state 30
    factor                         shift and go to state 19
    var                            shift and go to state 31
    call                           shift and go to state 21
    simple_expression              shift and go to state 32
    expression                     shift and go to state 33

state 19

    (57) operation_expression -> factor . simb_op operation_expression
    (58) operation_expression -> factor .
    (59) simb_op -> . addop
    (60) simb_op -> . mulop
    (61) addop -> . PLUS
    (62) addop -> . MINUS
    (63) mulop -> . TIMES
    (64) mulop -> . DIVIDE

    LESS            reduce using rule 58 (operation_expression -> factor .)
    LESSEQUAL       reduce using rule 58 (operation_expression -> factor .)
    GREATER         reduce using rule 58 (operation_expression -> factor .)
    GREATEREQUAL    reduce using rule 58 (operation_expression -> factor .)
    DEQUAL          reduce using rule 58 (operation_expression -> factor .)
    DISTINT         reduce using rule 58 (operation_expression -> factor .)
    QUOTES          reduce using rule 58 (operation_expression -> factor .)
    SEMICOLON       reduce using rule 58 (operation_expression -> factor .)
    RPAREN          reduce using rule 58 (operation_expression -> factor .)
    COMMA           reduce using rule 58 (operation_expression -> factor .)
    PLUS            shift and go to state 37
    MINUS           shift and go to state 40
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 35


    addop                          shift and go to state 34
    simb_op                        shift and go to state 39
    mulop                          shift and go to state 38

state 20

    (66) factor -> var .

    PLUS            reduce using rule 66 (factor -> var .)
    MINUS           reduce using rule 66 (factor -> var .)
    TIMES           reduce using rule 66 (factor -> var .)
    DIVIDE          reduce using rule 66 (factor -> var .)
    SEMICOLON       reduce using rule 66 (factor -> var .)
    COMMA           reduce using rule 66 (factor -> var .)
    LESS            reduce using rule 66 (factor -> var .)
    LESSEQUAL       reduce using rule 66 (factor -> var .)
    GREATER         reduce using rule 66 (factor -> var .)
    GREATEREQUAL    reduce using rule 66 (factor -> var .)
    DEQUAL          reduce using rule 66 (factor -> var .)
    DISTINT         reduce using rule 66 (factor -> var .)
    QUOTES          reduce using rule 66 (factor -> var .)
    RPAREN          reduce using rule 66 (factor -> var .)



state 21

    (67) factor -> call .

    PLUS            reduce using rule 67 (factor -> call .)
    MINUS           reduce using rule 67 (factor -> call .)
    TIMES           reduce using rule 67 (factor -> call .)
    DIVIDE          reduce using rule 67 (factor -> call .)
    LESS            reduce using rule 67 (factor -> call .)
    LESSEQUAL       reduce using rule 67 (factor -> call .)
    GREATER         reduce using rule 67 (factor -> call .)
    GREATEREQUAL    reduce using rule 67 (factor -> call .)
    DEQUAL          reduce using rule 67 (factor -> call .)
    DISTINT         reduce using rule 67 (factor -> call .)
    QUOTES          reduce using rule 67 (factor -> call .)
    RPAREN          reduce using rule 67 (factor -> call .)
    COMMA           reduce using rule 67 (factor -> call .)
    SEMICOLON       reduce using rule 67 (factor -> call .)



state 22

    (47) var -> ID .
    (69) call -> ID . LPAREN args RPAREN

    EQUAL           reduce using rule 47 (var -> ID .)
    PLUS            reduce using rule 47 (var -> ID .)
    MINUS           reduce using rule 47 (var -> ID .)
    TIMES           reduce using rule 47 (var -> ID .)
    DIVIDE          reduce using rule 47 (var -> ID .)
    LESS            reduce using rule 47 (var -> ID .)
    LESSEQUAL       reduce using rule 47 (var -> ID .)
    GREATER         reduce using rule 47 (var -> ID .)
    GREATEREQUAL    reduce using rule 47 (var -> ID .)
    DEQUAL          reduce using rule 47 (var -> ID .)
    DISTINT         reduce using rule 47 (var -> ID .)
    QUOTES          reduce using rule 47 (var -> ID .)
    RPAREN          reduce using rule 47 (var -> ID .)
    COMMA           reduce using rule 47 (var -> ID .)
    SEMICOLON       reduce using rule 47 (var -> ID .)
    PLUSPLUS        reduce using rule 47 (var -> ID .)
    MINUSMINUS      reduce using rule 47 (var -> ID .)
    LPAREN          shift and go to state 41



state 23

    (5) var_declaration_list -> var_declaration_list COMMA var . EQUAL operation_expression

    EQUAL           shift and go to state 42



state 24

    (47) var -> ID .

    EQUAL           reduce using rule 47 (var -> ID .)
    SEMICOLON       reduce using rule 47 (var -> ID .)
    RPAREN          reduce using rule 47 (var -> ID .)



state 25

    (15) param -> type_specifier . ID

    ID              shift and go to state 43



state 26

    (11) params -> param_list .

    RPAREN          reduce using rule 11 (params -> param_list .)



state 27

    (12) param_list -> param . COMMA param_list
    (13) param_list -> param .

    COMMA           shift and go to state 44
    RPAREN          reduce using rule 13 (param_list -> param .)



state 28

    (7) fun_declaration -> type_specifier ID LPAREN params . RPAREN compount_stmt

    RPAREN          shift and go to state 45



state 29

    (14) param_list -> empty .

    RPAREN          reduce using rule 14 (param_list -> empty .)



state 30

    (48) simple_expression -> operation_expression . relop operation_expression
    (49) simple_expression -> operation_expression .
    (50) relop -> . LESS
    (51) relop -> . LESSEQUAL
    (52) relop -> . GREATER
    (53) relop -> . GREATEREQUAL
    (54) relop -> . DEQUAL
    (55) relop -> . DISTINT
    (56) relop -> . QUOTES

    SEMICOLON       reduce using rule 49 (simple_expression -> operation_expression .)
    RPAREN          reduce using rule 49 (simple_expression -> operation_expression .)
    COMMA           reduce using rule 49 (simple_expression -> operation_expression .)
    LESS            shift and go to state 48
    LESSEQUAL       shift and go to state 52
    GREATER         shift and go to state 53
    GREATEREQUAL    shift and go to state 46
    DEQUAL          shift and go to state 49
    DISTINT         shift and go to state 50
    QUOTES          shift and go to state 51


    relop                          shift and go to state 47

state 31

    (45) expression -> var . EQUAL expression
    (66) factor -> var .

    EQUAL           shift and go to state 54
    PLUS            reduce using rule 66 (factor -> var .)
    MINUS           reduce using rule 66 (factor -> var .)
    TIMES           reduce using rule 66 (factor -> var .)
    DIVIDE          reduce using rule 66 (factor -> var .)
    LESS            reduce using rule 66 (factor -> var .)
    LESSEQUAL       reduce using rule 66 (factor -> var .)
    GREATER         reduce using rule 66 (factor -> var .)
    GREATEREQUAL    reduce using rule 66 (factor -> var .)
    DEQUAL          reduce using rule 66 (factor -> var .)
    DISTINT         reduce using rule 66 (factor -> var .)
    QUOTES          reduce using rule 66 (factor -> var .)
    RPAREN          reduce using rule 66 (factor -> var .)
    COMMA           reduce using rule 66 (factor -> var .)
    SEMICOLON       reduce using rule 66 (factor -> var .)



state 32

    (46) expression -> simple_expression .

    COMMA           reduce using rule 46 (expression -> simple_expression .)
    RPAREN          reduce using rule 46 (expression -> simple_expression .)
    SEMICOLON       reduce using rule 46 (expression -> simple_expression .)



state 33

    (65) factor -> LPAREN expression . RPAREN

    RPAREN          shift and go to state 55



state 34

    (59) simb_op -> addop .

    LPAREN          reduce using rule 59 (simb_op -> addop .)
    NUMBER          reduce using rule 59 (simb_op -> addop .)
    ID              reduce using rule 59 (simb_op -> addop .)



state 35

    (64) mulop -> DIVIDE .

    LPAREN          reduce using rule 64 (mulop -> DIVIDE .)
    NUMBER          reduce using rule 64 (mulop -> DIVIDE .)
    ID              reduce using rule 64 (mulop -> DIVIDE .)



state 36

    (63) mulop -> TIMES .
